fixed contact page on mobile, is better now

--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -104,3 +104,37 @@ h4:hover {
 .outer-div {
     padding-bottom: 100px;
 }
+
+@media (max-width: 450px) {
+    .send-message-label {
+        padding-left: 10px;
+    }
+
+    .form {
+        padding-left: 0px;
+    }
+
+    .contact-info {
+        padding: 10px;
+        width: 95%;
+    }
+
+    .form-container {
+        width: 95%;
+    }
+
+    .form-input {
+        width: 99%;
+    }
+    
+    .form-textarea {
+        width: 99%;
+        margin: auto;
+    }
+
+    .submit-btn {
+        width: 120px;
+        height: 40px;
+        margin: auto;
+    }
+}
